<resources>
    <string name="app_name">Bima Yangu</string>
    <string name="uaturl">https://www.bimayangu.ke/api/v5</string>
    <string name="createregistration">Create Your Account</string>
    <string name="app_version">1.0.4</string>
    <string name="createregistrationnew">To register for the Bima Yangu system, please enter the details below</string>
    <string name="otpverification">OTP Verification</string>
    <string name="sentverification">We have sent a verification code to your Email ID and Phone Number</string>
    <string name="receiveotpnot">Didn\'t receive the OTP?</string>
    <string name="resendotp">RESEND OTP</string>
    <string name="firstname">First Name</string>
    <string name="emailid">Email ID</string>
    <string name="phnnum">XXX XX XXX</string>
    <string name="otp">Enter OTP</string>
    <string name="otpman">Please enter the OTP</string>
    <string name="refcode">Referral Code (Optional)</string>
    <string name="signinagree">By proceeding in, you agree to our</string>
    <string name="termsuse">Terms of Use</string>
    <string name="preivpolicy">Privacy Policy</string>
    <string name="loginitxt">Sign In</string>
    <string name="loginitxtnew">Please enter your email id to sign in.</string>
    <string name="signuptxt">Sign Up</string>
    <string name="weltxt">Your Insurance Assistant</string>
    <string name="incdttime">When did the incident happen?</string>
    <string name="nexttxt">NEXT</string>
    <string name="sendsms">SEND SMS</string>
    <string name="adddriv">ADD DRIVER</string>
    <string name="choseveh">Choose Your Vehicle</string>
    <string name="chosedriver">Choose Your Driver</string>
    <string name="list_of_grievance_you_have_applied">List Of Grievance you have applied :</string>
    <string name="search_msg">Search by Reg No.</string>
    <string name="servicetxt">Select the Services you needed.</string>
    <string name="admin">Your Request has some technical issues. An incident is created and escalated to Technical support team. You will be contacted soon for issue resolution.</string>
    <string name="nonetwork">Please check your network connection</string>
    <string name="ambtxt">Ambulance</string>
    <string name="towingtxt">Towing</string>
    <string name="policetxt">Police</string>
    <string name="_254">+254</string>
    <string name="phone_number">Phone Number</string>
    <string name="add">Add</string>
    <string name="choose_emergency_contact_n_optional">Choose Emergency Contact \n(Optional)</string>
    <string name="nameman">Please enter your Full Name</string>
    <string name="emailman">Please enter your Email ID</string>
    <string name="phonenumman">Plese enter your Phone Number</string>
    <string name="validphoneno">Please enter the valid 9 digit Kenya Phone Number</string>
    <string name="validemailid">Please enter the valid Email ID</string>
    <string name="shwqr">Show QR Code</string>
    <string name="scanqr">Scan QR Code</string>
    <string name="certinfotxt">Certificate Information</string>
    <string name="vechinfotxt">Vehicle Information</string>
    <string name="vechno">Vehicle Number</string>
    <string name="certnum">Certificate Number</string>
    <string name="typecert">Type of Certificate</string>
    <string name="chassinum">Chassis Number</string>
    <string name="claimtypetxt">Choose your Claim Type</string>
    <string name="thirdpartyqr">Do you like your captured information to be sent or received by the third party vehicle?</string>
    <string name="shakephonetxt">Shake with nearby device to quickly connect and share/receive Claim Incident details</string>
    <string name="drivertxt">Add New Driver</string>
    <string name="fueldeliv">Fuel Delivery</string>
    <string name="flattire">Changing Flat Tire</string>
    <string name="battery">Battery jump Start</string>
    <string name="assistantacc">Assistant at Accident Site</string>
    <string name="certscan">Certificate Scan  <font color="#ff0000">*</font></string>
    <string name="infocrtexpiry">(As printed on your certificate for validating active status of the policy)</string>
    <string name="expirydate">Select the Certificate Expiry Date<font color="#ff0000">*</font></string>
    <string name="drivingnum">Driver Licence Number <font color="#ff0000">*</font></string>
    <string name="licencestartdate">DL Start Date <font color="#ff0000">*</font></string>
    <string name="licenceexpirydate">DL Expiry Date <font color="#ff0000">*</font></string>
    <string name="capdllicence">Capture Driving Licence</string>
    <string name="carproceed">Please capture the damage images</string>
    <string name="regveritxt">Vehicle Registration or Chassis Number <font color="#ff0000">*</font></string>
    <string name="regvalitxt">Please select the Reason and enter the Registration number to confirm the certificate validation.</string>
    <string name="reasonselect">Select the Reason "<font color="#ff0000">*</font></string>
    <string name="verifytxt">VERIFY</string>
    <string-array name="reasontype">
        <item>Self-Validation to ensure I have correct certificate</item>
        <item>Validation of other personnel’s Insurance Certificates</item>
        <item>Stolen/Theft</item>
        <item>Other reasons – I cannot explain</item>
    </string-array>
    <string name="amp"><![CDATA[&]]></string>
    <string name="_00_59">00:59</string>
    <string name="full_name">Full Name</string>
    <string name="session_expired">Your session have been expired. Please login again to continue</string>
    <string name="cra_idval">Bima Yangu ID</string>
    <string name="prefix254">+254</string>
    <string name="file_invalid_image">File is invalid. Please upload only the image file from your mobile.</string>
    <string name="go_to_dashboard">GO TO DASHBOARD</string>
    <string name="proceed"><![CDATA[PROCEED]]></string>
    <string name="activate_your_vehicle">Activate Your Vehicle</string>
    <string name="to_activate_a_vehicle_you_must_have_a_valid_certificate">To activate a vehicle, you must have a valid certificate.</string>
    <string name="please_select_expire_date">Please select expiry date</string>
    <string name="collen">:</string>
    <string name="a131313131">A131313131</string>
    <string name="type_of_certificate">Type of Certificate</string>
    <string name="xxxxxxxx">xxxxxxxx</string>
    <string name="please_select_the_date">Please select the date</string>
    <string name="add_new_driver"><![CDATA[Add New Driver >>]]></string>
    <string name="collision">Collision</string>
    <string name="only_claim_registration_offline_video_will_be_loaded_if_you_dont_have_internet">Only Claim Registration Offline video will be loaded if you dont have internet</string>
    <string name="cra_vehicle_registration">Bima Yangu Vehicle Registration</string>
    <string name="grievances">Grievances</string>
    <string name="claim_collision">Claim Collision</string>
    <string name="claim_self_involving">Claim Self Involving</string>
    <string name="claim_stolen">Claim Stolen</string>
    <string name="claim_registration_offline">Claim Registration - Offline</string>
    <string name="orange_color_indicates_the_others_vehicle"><![CDATA[-> Orange color indicates the Others Vehicle]]></string>
    <string name="no_records_found">No Records Found</string>
    <string name="insurance_and_cover_basics">Insurance and cover basics</string>
    <string name="claims_101">Claims 101</string>
    <string name="guidelines_for_insurance_companies">Guidelines for Insurance companies</string>
    <string name="how_an_insured_is_protected_from_denial_of_claims">How an insured is protected from denial of claims</string>
    <string name="vehicle_valuations_repairs_and_my_contributions">Vehicle valuations, repairs and my contributions</string>
    <string name="vehicle_write_offs">Vehicle write offs</string>
    <string name="customer_support_and_service_desk">Customer support and service desk</string>
    <string name="other_services">Other Services</string>
    <string name="if_the_two_cars_other_services">If the two cars other services</string>
    <string name="you_have_scanned_the_digital_certificate">*** You have scanned the digital certificate ***</string>
    <string name="certificate_expiry_date_as_printed_on_your_certificate_for_validating_active_status_of_the_policy">Certificate expiry date as printed on your certificate (for validating active status of the policy) <font color="#ff0000">*</font></string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="policy_information">Policy Information</string>
    <string name="verify_the_policy_information_displayed_matches_your_certificate">Verify the Policy information displayed matches your certificate.</string>
    <string name="certificate">Certificate #</string>
    <string name="policy">Policy #</string>
    <string name="policy_begin_date">Policy Begin Date</string>
    <string name="policy_end_date">Policy End Date</string>
    <string name="insurer">Insurer</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="verify_the_vehicle_information_displayed_matches_your_certificate">Verify the Vehicle information displayed matches your certificate.</string>
    <string name="registration">Registration #</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="chassis_numberAsterisk">Chassis Number <font color="#ff0000">*</font></string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="makemodel"><![CDATA[Make & Model]]></string>
    <string name="makeAsterisk">Make <font color="#ff0000">*</font></string>
    <string name="modelAsterisk">Model <font color="#ff0000">*</font></string>
    <string name="yearAsterisk">Year <font color="#ff0000">*</font></string>
    <string name="or">(OR)</string>
    <string name="next">NEXT</string>
    <string name="video_play">Video Play</string>
    <string name="upon_completion_please_click_the_stop_button_on_the_right">* Upon completion, please click the stop button on the right *</string>
    <string name="to_provide_video_evidence_click_the_record_button_on_the_left_and_then_speak_the_text_displayed">To provide video evidence, click the record button on the left and then speak the text displayed.</string>
    <string name="video_evidence_optional">Video Evidence <font color="#55AAFF">(Optional)</font></string>
    <string name="qr_code">QR Code</string>
    <string name="scan_the_qr_code_to_connect">To get details about your incident, ask a third party vehicle driver to scan this QR code</string>
    <string name="next2"><![CDATA[NEXT >>]]></string>
    <string name="cam_here">Cam here</string>
    <string name="vehicleInfoMsg">Please enter the Registration/Chassis number to verify your Motor insurance.</string>
    <string name="vehicleRegistration">Vehicle Registration or Chassis Number <font color='#FF0000'>*</font> :</string>
    <string name="chassisHint">Enter Registration or Chassis number</string>
    <string name="rescan">ReScan</string>
    <string name="verify">Verify</string>
    <string name="continue_terms">Continue</string>
    <string name="welcome_to">Welcome to</string>
    <string name="bima_yangu">Bima Yangu</string>
    <string name="please_read_our_terms_and_conditions_carefully_before_using_this_app">Please read our Terms and Conditions carefully before using this app.</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="Claim_title">Bima Yangu enables you to manage insurance claims seamlessly and access essential features related to your insurance policies.</string>
</resources>