<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".termsandconditions.TermsAndConditions">


    <ImageView
        android:layout_width="@dimen/activity_margin_200dp"
        android:layout_height="@dimen/activity_margin_200dp"
        android:src="@drawable/bimayangicon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="@dimen/activity_margin_25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/bima_yangu"
        android:textAlignment="center"
        android:textColor="@color/appColor"
        android:textSize="@dimen/activity_margin_25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin_10dp"
        android:layout_marginVertical="@dimen/activity_margin_25dp"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/Claim_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_margin_16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_margin_10dp"
        android:layout_marginTop="@dimen/activity_margin_15dp"
        android:layout_marginBottom="@dimen/activity_margin_20dp"
        android:fontFamily="@font/latinotypeantartidaroundedmedium"
        android:text="@string/please_read_our_terms_and_conditions_carefully_before_using_this_app"
        android:textAlignment="center"
        android:textSize="@dimen/activity_margin_16dp" />

    <!--Terms and Conditions-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxTermsAndConditions"
            style="@style/customCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latinotypeantartidaroundedmedium"

            android:text="@string/i_agree_to_the"
            android:textAlignment="viewStart"
            android:textSize="@dimen/activity_margin_14dp" />

        <TextView
            android:id="@+id/termsAndConditionsNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_5dp"
            android:fontFamily="@font/latinotypeantartidaroundedbold"
            android:text="@string/terms_conditions"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/activity_margin_16dp" />


    </LinearLayout>


    <Button
        android:id="@+id/continueTermsAndCondition"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_margin_50dp"
        android:layout_marginHorizontal="@dimen/activity_margin_15dp"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/continue_terms"
        android:textSize="@dimen/activity_margin_16dp"
        android:layout_marginTop="@dimen/activity_margin_20dp"
        android:backgroundTint="@color/appColor"
        android:textColor="@color/white"/>


</LinearLayout>