<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ThirdPartyQrCodeGenerate">

    <ImageView
        android:id="@+id/closeScanQr"
        android:layout_width="@dimen/activity_margin_50dp"
        android:layout_height="@dimen/activity_margin_50dp"
        android:src="@drawable/closeicon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_20dp"
        android:layout_marginTop="@dimen/activity_margin_10dp"
        android:layout_marginEnd="@dimen/activity_margin_10dp"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:text="@string/scan_the_qr_code_to_connect"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_margin_20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:contentDescription="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextBtnInScanQr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/latinotypeantartidaroundedbold"
        android:padding="@dimen/activity_margin_10dp"
        android:text="@string/next"
        android:textColor="@color/bluehyperlink"
        android:textSize="@dimen/activity_margin_20dp"
        app:drawableTint="@color/bluehyperlink" />

</LinearLayout>
